--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body {
  background-color: rgb(7 8 18)!important; 
 }
 
-
+.body-fixing{
+  margin-top: 250px;
+}
 /* body {
   background: url('data: image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"%3E%3Crect width="100" height="100" fill="%23000000" /%3E%3Ccircle cx="10" cy="10" r="5" fill="%23222222" /%3E%3Ccircle cx="30" cy="30" r="5" fill="%23333333" /%3E%3Ccircle cx="50" cy="50" r="5" fill="%23444444" /%3E%3Ccircle cx="70" cy="70" r="5" fill="%23555555" /%3E%3Ccircle cx="90" cy="90" r="5" fill="%23666666" /%3E%3C/svg%3E');
   background-size: 20px 20px;
@@ -150,31 +152,29 @@ header {
   width: 85%;
   z-index: 1444 !important;
   font-family: "Roboto", sans-serif;
-  margin: 20px auto;
-  position: sticky;
-  transition: bottom 1s ease, top 1s ease; /* Smooth transition */
-  bottom: -20px; /* Initially hide at bottom */
+  margin: 0 auto;
+  position: fixed;
   max-width: 900px;
-  
-}
-
-/* When fixed at the bottom */
- header.fixed {
-  position: fixed;
-  bottom: 40px;
+  top: 20px; /* Initial position from top */
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) translateY(0); /* Neutral position */
+  transition: transform 0.5s ease-in-out, top 0.5s ease-in-out, bottom 0.5s ease-in-out;
 }
 
-/* When the header is hidden */
-header.hidden {
-  position: fixed;
-  top: 20px;
-  bottom: -20px;
-  left: 50%;
-  transform: translateX(-50%);
-
+/* When scrolled more than 200px */
+header.hidden-bottom {
+  top: unset; /* Reset top to allow bottom positioning */
+  bottom: 20px; /* Move to bottom */
+  transform: translateX(-50%) translateY(-20px); /* Slide upwards */
 }
+
+/* When user scrolls back to top */
+header.hidden-top {
+  top: 20px; /* Move back to top */
+  bottom: unset; /* Reset bottom to allow top positioning */
+  transform: translateX(-50%) translateY(20px); /* Slide downwards */
+}
+
 
 div.nav-wrap {
   padding: 15px 15px;
@@ -304,9 +304,11 @@ div.nav-wrap {
 .headline {
   font-size: 4em;
   margin-bottom: 20px;
-  color: #ffffff; /* White text for the headline */
+  color: #ffffff; 
   text-align: center;
   padding:0px!important;
+  margin-top: 100px;
+
 }
 
 .description {
@@ -644,6 +646,13 @@ div.nav-wrap {
   margin-top: 50px;
 }
 
+.service-cards {
+  display: flex; /* Arrange cards in a row */
+  gap: 20px; /* Spacing between cards */
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 50px;
+}
 .card {
   background-color: #0f0f21; /* Background color of the card */
   border-radius: 10px!important; /* Rounded corners */
