--- a/style.css
+++ b/style.css
@@ -488,7 +488,7 @@ div.nav-wrap {
 }
 
 .plyr__control--overlaid {
-  background: #6c72ffb5;
+  background: #0c1253;
   border-radius: 50%;
   padding: 10px;
   
