--- a/style.css
+++ b/style.css
@@ -1014,7 +1014,7 @@ div.nav-wrap {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: #25257d;
+  background-color: #2d2d49;
   color: white;
   cursor: pointer;
   padding: 15px;
